# dx-launchpad-sc

./: .gitignore  README.md
.github/workflows/: release.yml
launchpad/: Cargo.toml  README.md
launchpad-common/: Cargo.toml
launchpad-common/src/: blacklist.rs  config.rs  lib.rs  ongoing_operation.rs  random.rs  setup.rs  tickets.rs  token_send.rs  user_interactions.rs  winner_selection.rs
launchpad-guaranteed-tickets/: Cargo.toml
launchpad-guaranteed-tickets/meta/: Cargo.toml
launchpad-guaranteed-tickets/meta/src/: main.rs
launchpad-guaranteed-tickets/src/: guaranteed_tickets_init.rs  guranteed_ticket_winners.rs  lib.rs
launchpad-guaranteed-tickets/tests/: guaranteed_tickets_test.rs
launchpad-guaranteed-tickets/wasm/: Cargo.toml
launchpad-locked-tokens/: Cargo.toml
launchpad-locked-tokens-and-guaranteed-tickets/: Cargo.toml
launchpad-locked-tokens-and-guaranteed-tickets/interaction/: internal_readme.md  (+1 more)
launchpad-nft-and-guaranteed-tickets/: Cargo.toml
launchpad-with-nft/: Cargo.toml
launchpad/interaction/: end_owner_snippets.sh  internal_readme.md  readme.md  snippets.sh
launchpad/mandos/: blacklist.scen.json  blacklist_support.scen.json  claim.scen.json  confirm_tickets.scen.json  deposit_launchpad_tokens.scen.json  filter_tickets_consistency.scen.json  init.scen.json  select_winners_multiple_calls.scen.json  select_winners_one_call.scen.json  winner_selection_equal_claim_epoch.scen.json
launchpad/meta/: Cargo.toml
launchpad/meta/src/: main.rs
launchpad/src/: lib.rs
launchpad/wasm/: Cargo.toml
launchpad/wasm/src/: lib.rs
(+40 files in other folders)
