[package]
name = "launchpad"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.dharitri-sc]
version = "0.0.9"

[dev-dependencies.dharitri-sc-meta]
version = "0.0.9"
